group-session controller
